--- a/about.css
+++ b/about.css
@@ -1,5 +1,5 @@
 body {
-    font-family: arial;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
