--- a/campaign.css
+++ b/campaign.css
@@ -1,22 +1,64 @@
-     button {
-         margin: 35px 280px;
-         height: 50px;
-         width: 150px;
-         font-size: 18px;
-         outline: none;
-         cursor: pointer;
-         font-weight: bold;
-         background: rgb(8, 110, 206);
-         border-radius: 5px;
-         border: none;
-         transition: .5s;
-     }
-     
-     button a {
-         text-decoration: none;
-         color: rgb(247, 240, 243);
-     }
-     
-     button:hover {
-         background: green;
-     }
+    body {
+        background-color: rgb(241, 241, 241);
+        font-family: sans-serif
+    }
+    
+    p {
+        font-size: 20px;
+        font-family: 'Segoe UI';
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-top: 20px;
+    }
+    
+    h1 {
+        text-align: center;
+        font-size: 50px;
+        padding-top: 4px;
+    }
+    
+    .dcamp p1 {
+        font-family: cursive;
+        font-size: 20px;
+        text-align: justify;
+        float: right;
+        width: 900px;
+        margin-left: 150px;
+        margin-top: -240px;
+        margin-right: 50px;
+    }
+    
+    h2 {
+        text-align: center;
+        text-decoration: underline;
+        padding-top: 20px;
+        margin-bottom: -1.5px;
+    }
+    
+    img {
+        margin-left: 100px;
+        border-radius: 20px;
+    }
+    
+    button {
+        margin: 35px 280px;
+        height: 50px;
+        width: 150px;
+        font-size: 18px;
+        outline: none;
+        cursor: pointer;
+        font-weight: bold;
+        background: rgb(8, 110, 206);
+        border-radius: 5px;
+        border: none;
+        transition: .5s;
+    }
+    
+    button a {
+        text-decoration: none;
+        color: rgb(247, 240, 243);
+    }
+    
+    button:hover {
+        background: green;
+    }
